--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 GO_CRM_DOMAIN=planetabb.go-crm.ru
 APP_TOKEN=your_app_token_here
-SMS_LOGIN=your_phone_number
+SMS_LOGIN=79100019301
 SMS_CODE=
-DATABASE_URL=sqlite:///data/gocrm.db
+DATABASE_URL=sqlite:///data/planeta_gocrm.db
